--- a/GastroByte/GastroByte.csproj
+++ b/GastroByte/GastroByte.csproj
@@ -135,12 +135,15 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\UsuarioController.cs" />
+    <Compile Include="Dtos\ReservaDto.cs" />
     <Compile Include="Dtos\UsuarioDto.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\ReservaRepository.cs" />
     <Compile Include="Repositories\UsuarioReposiyoty.cs" />
+    <Compile Include="Services\ReservaService.cs" />
     <Compile Include="Services\UsuarioService.cs" />
     <Compile Include="Utilities\DBContextUtility.cs" />
     <Compile Include="Utilities\EncryptUtility.cs" />
