--- a/GastroByte/bin/GastroByte.dll.config
+++ b/GastroByte/bin/GastroByte.dll.config
@@ -20,6 +20,10 @@
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
+	  <customErrors mode="On" defaultRedirect="~/Shared/Error">
+		  <error statusCode="404" redirect="~/Shared/Error" />
+		  <error statusCode="500" redirect="~/Shared/Error" />
+	  </customErrors>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
