--- a/GastroByte/GastroByte.csproj
+++ b/GastroByte/GastroByte.csproj
@@ -130,25 +130,30 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="App_Start\BundleConfig.cs" />
-    <Compile Include="App_Start\FilterConfig.cs" />
-    <Compile Include="App_Start\RouteConfig.cs" />
-    <Compile Include="Controllers\HomeController.cs" />
-    <Compile Include="Controllers\SharedController.cs" />
-    <Compile Include="Controllers\UsuarioController.cs" />
-    <Compile Include="Dtos\ReservaDto.cs" />
-    <Compile Include="Dtos\UsuarioDto.cs" />
-    <Compile Include="Global.asax.cs">
-      <DependentUpon>Global.asax</DependentUpon>
-    </Compile>
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repositories\ReservaRepository.cs" />
-    <Compile Include="Repositories\UsuarioReposiyoty.cs" />
-    <Compile Include="Services\ReservaService.cs" />
-    <Compile Include="Services\UsuarioService.cs" />
-    <Compile Include="Utilities\AuthorizeRoleAttribute.cs" />
-    <Compile Include="Utilities\DBContextUtility.cs" />
-    <Compile Include="Utilities\EncryptUtility.cs" />
+   <Compile Include="App_Start\BundleConfig.cs" />
+<Compile Include="App_Start\FilterConfig.cs" />
+<Compile Include="App_Start\RouteConfig.cs" />
+<Compile Include="Controllers\HomeController.cs" />
+<Compile Include="Controllers\MenuController.cs" />
+<Compile Include="Controllers\ReservasController.cs" />
+<Compile Include="Controllers\UsuarioController.cs" />
+<Compile Include="Controllers\SharedController.cs" />
+<Compile Include="Dtos\MenuDto.cs" />
+<Compile Include="Dtos\UsuarioDto.cs" />
+<Compile Include="Dtos\ReservaDto.cs" />
+<Compile Include="Global.asax.cs">
+  <DependentUpon>Global.asax</DependentUpon>
+</Compile>
+<Compile Include="Properties\AssemblyInfo.cs" />
+<Compile Include="Repositories\MenuRepository.cs" />
+<Compile Include="Repositories\UsuarioReposiyoty.cs" />
+<Compile Include="Repositories\ReservaRepository.cs" />
+<Compile Include="Services\MenuService.cs" />
+<Compile Include="Services\UsuarioService.cs" />
+<Compile Include="Services\ReservaService.cs" />
+<Compile Include="Utilities\DBContextUtility.cs" />
+<Compile Include="Utilities\EncryptUtility.cs" />
+<Compile Include="Utilities\AuthorizeRoleAttribute.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-grid.css" />
