--- a/GastroByte/Views/Web.config
+++ b/GastroByte/Views/Web.config
@@ -31,6 +31,12 @@
       <remove name="BlockViewHandler"/>
       <add name="BlockViewHandler" path="*" verb="*" preCondition="integratedMode" type="System.Web.HttpNotFoundHandler" />
     </handlers>
+	  <httpErrors errorMode="Custom" existingResponse="Replace">
+		  <remove statusCode="404" subStatusCode="-1" />
+		  <error statusCode="404" path="/Shared/Error" responseMode="ExecuteURL" />
+		  <remove statusCode="500" subStatusCode="-1" />
+		  <error statusCode="500" path="/Shared/Error" responseMode="ExecuteURL" />
+	  </httpErrors>
   </system.webServer>
 
   <system.web>
