reportes y generar recibo %

--- a/GastroByte/GastroByte.csproj
+++ b/GastroByte/GastroByte.csproj
@@ -339,6 +339,8 @@
     <Content Include="Views\Administrador\IndexMenu.cshtml" />
     <Content Include="Views\Administrador\EditMenu.cshtml" />
     <Content Include="Views\Shared\_Layout_admin.cshtml" />
+    <Content Include="Views\Administrador\ReporteReservas.cshtml" />
+    <Content Include="Views\Administrador\ListaReservas.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
